<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dark"
    tools:context="ua.in.zeusapps.snapsafari.activities.LoginActivity">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/textView"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="22sp"
            android:layout_marginBottom="100dp"
            android:text="@string/activity_login_welcome"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_gravity="start"
            android:background="@drawable/button_twitter"
            android:textColor="@android:color/white"
            android:drawableEnd="@drawable/twitter"
            android:drawableRight="@drawable/twitter"
            android:gravity="left|center_vertical"
            android:paddingLeft="32dp"
            android:textSize="18sp"
            android:layout_margin="4dp"
            android:text="@string/activity_login_twitter_login"

            android:id="@+id/activity_login_twitter_login"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textAllCaps="false"
            android:layout_gravity="start"
            android:background="@drawable/button_facebook"
            android:textColor="@android:color/white"
            android:drawableEnd="@drawable/facebook"
            android:drawableRight="@drawable/facebook"
            android:gravity="left|center_vertical"
            android:paddingLeft="32dp"
            android:textSize="18sp"
            android:layout_margin="4dp"
            android:text="@string/activity_login_facebook_login"

            android:id="@+id/activity_login_facebook_login"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_gravity="start"
            android:background="@drawable/button_gmail"
            android:textColor="@android:color/white"
            android:drawableEnd="@drawable/gmail"
            android:drawableRight="@drawable/gmail"
            android:gravity="start|center_vertical"
            android:paddingLeft="32dp"
            android:textSize="18sp"
            android:layout_margin="4dp"
            android:text="@string/activity_login_gmail_login"

            android:id="@+id/activity_login_gmail_login"/>
    </LinearLayout>
</FrameLayout>
