<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.in.zeusapps.snapsafari.activities.WelcomeActivity"
    android:background="@drawable/background_dark">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="22sp"
            android:layout_marginBottom="100dp"
            android:text="@string/activity_login_welcome"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            android:layout_margin="4dp"
            android:textAllCaps="false"
            android:layout_gravity="start"
            android:gravity="start|center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:textSize="18sp"
            android:text="@string/activity_welcome_register"
            android:drawableRight="@drawable/register"
            android:id="@+id/activity_welcome_register_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            android:layout_margin="4dp"
            android:textAllCaps="false"
            android:layout_gravity="start"
            android:gravity="start|center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:textSize="18sp"
            android:text="@string/activity_welcome_login"
            android:drawableRight="@drawable/login"
            android:id="@+id/activity_welcome_login_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_gravity="center_vertical|start"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:paddingLeft="32dp"
            android:textSize="18sp"
            android:background="@drawable/button_try_it"
            android:text="@string/activity_login_try_it"
            android:drawableRight="@drawable/try_it"
            android:drawableEnd="@drawable/try_it"
            android:textColor="@android:color/white"
            android:id="@+id/activity_welcome_try_it_login"/>


    </LinearLayout>



</android.support.constraint.ConstraintLayout>
