<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.in.zeusapps.snapsafari.activities.MenuActivity"
    android:background="@drawable/background_dark">

    <android.support.constraint.ConstraintLayout
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="6dp"
            android:background="@drawable/menu_info_background"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:paddingLeft="18dp"
            android:paddingRight="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:progress="60"
                    android:max="100"
                    android:progressDrawable="@drawable/progressbar_background"
                    android:id="@+id/activity_main_menu_progress_bar"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3200xp. Breeder"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"

                    android:id="@+id/activity_main_menu_info"/>
            </LinearLayout>
        </FrameLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activity_main_menu_profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:civ_border_width="2dp"
            android:src="@drawable/profile_img"
            app:civ_border_color="@color/colorProfileImgBorder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="23dp"
        android:layout_marginRight="32dp"
        android:id="@+id/activity_main_menu_notification_container">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="6dp"
            android:background="@drawable/menu_settings"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/notification_background"
            android:layout_gravity="right"
            android:text="8"
            android:id="@+id/activity_main_menu_notification_text"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">
        <Button
            android:id="@+id/activity_main_menu_play_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:background="@drawable/button_menu"
            android:drawableRight="@drawable/menu_play"
            android:gravity="start|center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/activity_main_menu_play_button"
            android:textAllCaps="false"
            android:textSize="18sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            android:layout_margin="4dp"
            android:textAllCaps="false"
            android:layout_gravity="start"
            android:gravity="start|center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:textSize="18sp"
            android:text="@string/activity_main_menu_battle"
            android:drawableRight="@drawable/menu_play"
            android:id="@+id/activity_main_menu_battle_button"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            android:layout_margin="4dp"
            android:textAllCaps="false"
            android:layout_gravity="start"
            android:gravity="start|center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:textSize="18sp"
            android:text="@string/activity_main_menu_snap_card_button"
            android:drawableRight="@drawable/menu_snap_cards"
            android:id="@+id/activity_main_menu_snap_cards_button"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            android:layout_margin="4dp"
            android:textAllCaps="false"
            android:layout_gravity="start"
            android:gravity="start|center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:textSize="18sp"
            android:text="@string/activity_main_menu_marketplace"
            android:drawableRight="@drawable/menu_snap_cards"
            android:id="@+id/activity_main_menu_marketplace_button"/>

    </LinearLayout>


    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="6dp"
        android:textAllCaps="false"
        android:layout_gravity="start"
        android:gravity="start|center"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/menu_settings"
        android:id="@+id/activity_main_menu_settings_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</android.support.constraint.ConstraintLayout>
